--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque&family=Roboto&family=Tilt+Neon&display=swap');
 .App {
   text-align: center;
+  /* font-family: 'Tilt Neon',sans-serif; */
+  /* font-family:'Roboto',sans-serif; */
 }
+
+/* .example::-webkit-scrollbar {
+  display: none;
+} */
 
 .App-logo {
   height: 40vmin;
